[gd_scene load_steps=5 format=3 uid="uid://b1o7tue8m7gnx"]

[ext_resource type="Script" path="res://Scripts/PhoneScreen.gd" id="1_7qolp"]
[ext_resource type="Texture2D" uid="uid://ue4x60qarbd" path="res://2D Art/Phone/in hand textures/phone screen texture to do list.png" id="1_hdxgn"]
[ext_resource type="FontFile" uid="uid://c564hivqc4yv3" path="res://2D Art/BIZUDPGothic-Regular.ttf" id="2_s8jyy"]
[ext_resource type="FontFile" uid="uid://c67lesfs66kdx" path="res://2D Art/BIZUDPGothic-Bold.ttf" id="4_4yrc8"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_7qolp")

[node name="ColorRect" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -512.0
offset_right = 512.0
offset_bottom = 1024.0
grow_horizontal = 2
texture = ExtResource("1_hdxgn")

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -306.0
offset_right = 230.0
offset_bottom = -248.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_s8jyy")
theme_override_font_sizes/font_size = 26
text = "Login to grandma's computer"
vertical_alignment = 2
autowrap_mode = 2

[node name="Label2" type="Label" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -241.0
offset_right = 230.0
offset_bottom = -183.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_s8jyy")
theme_override_font_sizes/font_size = 26
text = "Find grandma's password book
"
vertical_alignment = 2
autowrap_mode = 2

[node name="Label4" type="Label" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -162.0
offset_right = 230.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_s8jyy")
theme_override_font_sizes/font_size = 26
text = "Search grandma's room for clues of her pet's name."
vertical_alignment = 2
autowrap_mode = 2

[node name="Label7" type="Label" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -81.0
offset_right = 230.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_4yrc8")
theme_override_font_sizes/font_size = 30
text = "Daisy"
vertical_alignment = 2
autowrap_mode = 2

[node name="Label5" type="Label" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = 13.0
offset_right = 230.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_s8jyy")
theme_override_font_sizes/font_size = 26
text = "Search grandma's room for an important date she could use for her password"
vertical_alignment = 2
autowrap_mode = 2

[node name="Label8" type="Label" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = 98.0
offset_right = 230.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_4yrc8")
theme_override_font_sizes/font_size = 30
text = "June1997"
vertical_alignment = 2
autowrap_mode = 2

[node name="Label6" type="Label" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = 200.0
offset_right = 230.0
offset_bottom = 287.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_s8jyy")
theme_override_font_sizes/font_size = 26
text = "Search grandma's room for clues about a dish she likes"
vertical_alignment = 2
autowrap_mode = 2

[node name="Label9" type="Label" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = 309.0
offset_right = 230.0
offset_bottom = 367.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_4yrc8")
theme_override_font_sizes/font_size = 30
text = "LemonMeringue3!!​"
vertical_alignment = 2
autowrap_mode = 2
